// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> should render 1`] = `
<div
  className="form-check form-switch"
>
  <input
    className="form-check-input m-0 undefined"
    id="toggle-switch"
    onClick={[Function]}
    role="switch"
    type="checkbox"
  />
  <label
    className="form-check-label"
    htmlFor="toggle-switch"
  />
</div>
`;

exports[`<ToggleSwitch /> should render label 1`] = `
<div
  className="form-check form-switch"
>
  <input
    className="form-check-input m-0 undefined"
    id="toggle-switch"
    onClick={[Function]}
    role="switch"
    type="checkbox"
  />
  <label
    className="form-check-label"
    htmlFor="toggle-switch"
  >
    this is a label
  </label>
</div>
`;
